...
        #endif
    }

    func applicationDockMenu(_ sender: NSApplication) -> NSMenu? {
        let menu = NSMenu()
        let prefsItem = menu.addItem(
            withTitle: "Preferences...",
            action: #selector(StatusBarManager.openPreferences),
            keyEquivalent: ""
        )
        prefsItem.target = statusBarManager

        return menu
...
